scroll bar bug on mobile solution 2

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -29,9 +29,8 @@ body {
     margin: 0 0;
     height: 100vh;
     background-color: var(--bg-color);
-    overflow-x: hidden;
 }
-
+ 
 input {
     background: var(--input-bg)!important;
     color: var(--text-color)!important;
@@ -96,7 +95,6 @@ input {
     height: 100%;
     display: flex;
     background-color: var(--bg-color);
-    overflow-x: hidden;
 }
 
 .overflowHidden {
